try to fix figure spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1007,7 +1007,7 @@ pre code {
 	font-style: italic;
 /*  text-transform: uppercase; */
   font-weight: 300;
-  font-size: 10x;
+  font-size: 12px;
   color: #311e3e;
   margin: 30px;
 }
